# metrics_distributor

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: lib.rs
examples/: http_server.rs  server.rs  statsd_server.rs
extras/: after_build.sh
src/: distributor.rs  lib.rs  metrics.rs  reader.rs  server.rs  store.rs
src/collectors/: http.rs  mod.rs  statsd.rs
src/forwarders/: datadog.rs  mod.rs
src/parsers/: log_line.rs  mod.rs  statsd.rs
